--- a/Converency/Converency/View/Base.lproj/Main.storyboard
+++ b/Converency/Converency/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -17,44 +17,50 @@
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLx-Zs-2qx">
                                 <rect key="frame" x="0.0" y="646" width="414" height="216"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </pickerView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lQl-fh-Ikr">
-                                <rect key="frame" x="20" y="304" width="374" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPh-nn-bNw">
-                                <rect key="frame" x="20" y="431" width="374" height="33.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ple-T8-1Fe">
                                 <rect key="frame" x="20" y="97" width="373" height="161"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4jL-gd-eZw">
-                                <rect key="frame" x="180" y="547" width="55" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Convert"/>
-                                <connections>
-                                    <action selector="convertPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="H12-dh-WRC"/>
-                                </connections>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPh-nn-bNw">
+                                <rect key="frame" x="20" y="315" width="374" height="33.666666666666686"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="unU-B6-4sb">
+                                <rect key="frame" x="20" y="565" width="374" height="34"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lQl-fh-Ikr">
+                                        <rect key="frame" x="0.0" y="0.0" width="301" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4jL-gd-eZw">
+                                        <rect key="frame" x="309" y="0.0" width="65" height="34"/>
+                                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Convert"/>
+                                        <connections>
+                                            <action selector="convertPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="H12-dh-WRC"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.76290884356939026" green="0.93257902149532201" blue="0.96620899438858032" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="lQl-fh-Ikr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1VD-dP-hEZ"/>
                             <constraint firstItem="Ple-T8-1Fe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="2m5-5p-WuY"/>
-                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="5lG-5U-p62"/>
-                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="6Xt-TK-QSh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KPh-nn-bNw" secondAttribute="trailing" constant="20" id="7TY-pJ-QTu"/>
-                            <constraint firstItem="KPh-nn-bNw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="NMo-LI-e7z"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="unU-B6-4sb" secondAttribute="trailing" constant="20" id="83s-JA-ukP"/>
+                            <constraint firstItem="KPh-nn-bNw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="A5Z-c4-3qX"/>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="DfM-7j-D4Y"/>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="EVN-Km-i8n"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ple-T8-1Fe" secondAttribute="trailing" constant="21" id="PSK-wJ-vFu"/>
-                            <constraint firstItem="KPh-nn-bNw" firstAttribute="top" secondItem="lQl-fh-Ikr" secondAttribute="bottom" constant="93" id="S7i-2t-WMV"/>
-                            <constraint firstItem="lQl-fh-Ikr" firstAttribute="top" secondItem="Ple-T8-1Fe" secondAttribute="bottom" constant="46" id="bbR-fO-v21"/>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="S9e-EN-Tut"/>
+                            <constraint firstItem="unU-B6-4sb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ws7-Dh-hdN"/>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="top" secondItem="unU-B6-4sb" secondAttribute="bottom" constant="47" id="a9g-SP-Wuc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KPh-nn-bNw" secondAttribute="trailing" constant="20" id="ezF-z2-Ndg"/>
                             <constraint firstItem="Ple-T8-1Fe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="o0l-Zk-ll0"/>
-                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tg7-NQ-aGw"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lQl-fh-Ikr" secondAttribute="trailing" constant="20" id="xaK-Ci-GuH"/>
+                            <constraint firstItem="KPh-nn-bNw" firstAttribute="top" secondItem="Ple-T8-1Fe" secondAttribute="bottom" constant="57" id="uea-yJ-7P2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
