--- a/Converency/Converency/View/Base.lproj/Main.storyboard
+++ b/Converency/Converency/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6XM-b1-fbE">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Converency View Controller-->
+        <!--Converency-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConverencyViewController" customModule="Converency" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,10 +15,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLx-Zs-2qx">
-                                <rect key="frame" x="0.0" y="646" width="414" height="216"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </pickerView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ple-T8-1Fe">
                                 <rect key="frame" x="20" y="97" width="373" height="161"/>
                             </imageView>
@@ -28,15 +24,15 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="unU-B6-4sb">
-                                <rect key="frame" x="20" y="565" width="374" height="34"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GXi-V2-CTP">
+                                <rect key="frame" x="20" y="555" width="374" height="34"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lQl-fh-Ikr">
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lQl-fh-Ikr">
                                         <rect key="frame" x="0.0" y="0.0" width="301" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4jL-gd-eZw">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4jL-gd-eZw">
                                         <rect key="frame" x="309" y="0.0" width="65" height="34"/>
                                         <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Convert"/>
@@ -46,24 +42,31 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLx-Zs-2qx">
+                                <rect key="frame" x="0.0" y="597" width="414" height="216"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </pickerView>
                         </subviews>
-                        <color key="backgroundColor" red="0.76290884356939026" green="0.93257902149532201" blue="0.96620899438858032" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.76078431372549016" green="0.93333333333333335" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="2X5-Ll-PMm"/>
                             <constraint firstItem="Ple-T8-1Fe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="2m5-5p-WuY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="unU-B6-4sb" secondAttribute="trailing" constant="20" id="83s-JA-ukP"/>
                             <constraint firstItem="KPh-nn-bNw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="A5Z-c4-3qX"/>
-                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="DfM-7j-D4Y"/>
-                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="EVN-Km-i8n"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GXi-V2-CTP" secondAttribute="trailing" constant="20" id="GhV-Ad-9NW"/>
+                            <constraint firstItem="GXi-V2-CTP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="KD8-zh-SkV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ple-T8-1Fe" secondAttribute="trailing" constant="21" id="PSK-wJ-vFu"/>
-                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="S9e-EN-Tut"/>
-                            <constraint firstItem="unU-B6-4sb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ws7-Dh-hdN"/>
-                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="top" secondItem="unU-B6-4sb" secondAttribute="bottom" constant="47" id="a9g-SP-Wuc"/>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Qcf-YW-whC"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KPh-nn-bNw" secondAttribute="trailing" constant="20" id="ezF-z2-Ndg"/>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ff9-si-15M"/>
                             <constraint firstItem="Ple-T8-1Fe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="o0l-Zk-ll0"/>
                             <constraint firstItem="KPh-nn-bNw" firstAttribute="top" secondItem="Ple-T8-1Fe" secondAttribute="bottom" constant="57" id="uea-yJ-7P2"/>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="y5c-vR-eAT"/>
+                            <constraint firstItem="hLx-Zs-2qx" firstAttribute="top" secondItem="GXi-V2-CTP" secondAttribute="bottom" constant="8" id="zNL-Q9-aiH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Converency" image="dollarsign.square.fill" catalog="system" selectedImage="dollarsign.square.fill" id="roF-kZ-OdD"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="amountTextField" destination="lQl-fh-Ikr" id="kdD-p5-UQs"/>
                         <outlet property="convertedAmountLabel" destination="KPh-nn-bNw" id="6sU-vg-Fgb"/>
@@ -72,10 +75,40 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="902.89855072463774" y="133.92857142857142"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="tm9-8t-8cR">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="6XM-b1-fbE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TXJ-kS-0CN">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="3Dj-LY-Ovi"/>
+                        <segue destination="ol4-mm-4yR" kind="relationship" relationship="viewControllers" id="ZH2-PE-BTZ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vOs-NO-1bh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-7.2463768115942031" y="133.92857142857142"/>
+        </scene>
+        <!--BitCoin-->
+        <scene sceneID="ypT-XI-N8M">
+            <objects>
+                <viewControllerPlaceholder storyboardName="BitCoin" id="ol4-mm-4yR" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="m6q-Jt-f5D"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uoc-MR-7co" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="903" y="825"/>
         </scene>
     </scenes>
     <resources>
         <image name="Logo.png" width="400" height="161"/>
+        <image name="dollarsign.square.fill" catalog="system" width="64" height="56"/>
     </resources>
 </document>
